--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8676,8 +8676,8 @@ form .error-message {
 }
 
 .loader-wrapper {
-  position: absolute;
-  top: 38vh;
+  position: fixed;
+  top: 40%;
   left: 33vw;
   z-index: 100;
   width: 35vw;
@@ -9048,6 +9048,10 @@ h4 {
   height: 400px;
 }
 
+#root {
+  height: -webkit-fill-available;
+}
+
 .about,
 .albums,
 .album,
@@ -9142,7 +9146,7 @@ h4 {
   height: auto;
 }
 
-.overlay {
+.overlay, .banned {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -9156,7 +9160,24 @@ h4 {
   background-color: rgba(226, 52, 0, 0.7);
 }
 
+.banned p {
+  font-size: 2rem;
+  -webkit-transform: rotate(-30deg);
+          transform: rotate(-30deg);
+}
+
 .con:hover .overlay {
+  opacity: 1;
+}
+
+.cont {
+  position: relative;
+  width: 100%;
+  padding: 0;
+  margin: 0.5%;
+}
+
+.cont .banned {
   opacity: 1;
 }
 
@@ -9207,7 +9228,23 @@ h4 {
   text-align: left;
 }
 
-.modal-body, .modal-header {
+.tracks {
+  width: 60%;
+  margin: auto;
+}
+
+.tracks li {
+  background-color: #25292E;
+  text-align: left;
+}
+
+.tracks li span {
+  cursor: pointer;
+  float: right;
+}
+
+.modal-body,
+.modal-header {
   background: #25292E;
 }
 
@@ -9420,9 +9457,11 @@ footer .row ul a:active {
   .parallax {
     display: none;
   }
+  .lead {
+    font-size: 1rem;
+  }
   form .custom-input {
     margin: 0 auto;
-    padding: 2%;
   }
   form p {
     display: none;
@@ -9443,6 +9482,9 @@ footer .row ul a:active {
   h2 {
     margin: 0 auto;
   }
+  footer {
+    display: none;
+  }
 }
 
 @media (max-width: 575px) {
@@ -9458,8 +9500,14 @@ footer .row ul a:active {
   .card.text-white {
     margin: 2px;
   }
-  .login-user {
-    display: none;
+  .login-user .btn {
+    font-size: 0.8rem;
+  }
+  .navbar-toggler {
+    font-size: 1rem;
+  }
+  .navbar-brand {
+    margin-right: 0px;
   }
   .show-on-mobile-only {
     display: block;
@@ -9481,6 +9529,13 @@ footer .row ul a:active {
   }
   body {
     margin-bottom: 20%;
+  }
+  footer {
+    display: block;
+  }
+  .navbar,
+  .navbar-expand-sm {
+    padding: 7px;
   }
 }
 /*# sourceMappingURL=style.css.map */
